--- a/localisation/aus_events_l_english.yml
+++ b/localisation/aus_events_l_english.yml
@@ -167,3 +167,21 @@
   austria.1041.t:0 "슬로베니아의 저항 분쇄"
   austria.1041.d:0 "최근 슬로베니아 헌병대의 패배로 반군에 대한 저항이 커졌습니다. 우리는 숲을 불태우고 마을을 박격포로 포격하고 민간인들을 인질로 잡았습니다. 슬로베니아 놈들의 무자비한 게릴라전이 있은 후, 이것이 가능한 유일한 방법이었습니다. 슬로베니아의 저항은 이제 분쇄되었고 다른 나라들의 지원을 바랄 수 없습니다."
   austria.1041.a:0 "그들은 영원히 버틸 수 없었다."
+
+  austria.1045.t:0 "유고슬라비아의 운명"
+  austria.1045.d:0 "유고슬라비아는 오스트리아의 통제하에 있습니다, 어떻게 진행해야 합니까?"
+  austria.1045.a:0 "우호적인 유고슬라비아와 크로아티아를 복원하라."
+  austria.1045.b:0 "북부 지역을 통합하라."
+  austria.1045.c:0 "군사 점령을 계속하라."
+  
+  austria.1046.t:0 "갈리치아의 운명"
+  austria.1046.d:0 "갈리치아-로도메리아는 오스트리아의 통제하에 있습니다, 어떻게 진행해야 합니까?"
+  austria.1046.a:0 "우호적인 갈리치아국을 복원하라."
+  austria.1046.b:0 "갈리치아를 통합하라."
+  
+  ###Decisions
+  AUS_integrate_territories_decisions:0 "점령지 관리"
+  AUS_integrate_territories_decisions_desc:0 "오스트리아의 점령하에 영토가 있습니다, 어떻게 해야 합니까?"
+  AUS_fate_yugo:0 "유고슬라비아의 운명"
+  AUS_fate_galicia:0 "갈리치아의 운명"
+  AUS_satellite_bulgaria:0 "불가리아 위성국화"
