--- a/localisation/bav_focus_l_english.yml
+++ b/localisation/bav_focus_l_english.yml
@@ -94,8 +94,8 @@
  BAV_westwall_desc:0 "우리는 잠재적인 프랑스 침략자들로부터 우리의 서쪽 국경을 보호해야 합니다. 우리는 서부 방벽을 건설할 것입니다."
  BAV_eastwall:0 "동부 방벽"
  BAV_eastwall_desc:0 "이제 우리는 통일된 독일을 확보했으니, 러시아와의 동부 국경을 잠재적인 침략으로부터 보호하고 강화해야 합니다."
- BAV_demand_saar:0 "자를란트 요구"
- BAV_demand_saar_desc:0 "자르는 기원부터 독일의 일부입니다. 그것은 다시 한번 독일로 반환되어야 합니다."
+ BAV_demand_saar:0 "알자스 요구"
+ BAV_demand_saar_desc:0 "알자스-로렌은 기원부터 독일의 일부입니다. 그것은 다시 한번 독일로 반환되어야 합니다."
  BAV_support_CSA:0 "공산주의 미국 지원"
  BAV_support_CSA_desc:0 "미국에서의 공산주의에 대한 지지가 높아지고 있습니다. 우리는 존 리드 공산 정부를 지지하고 우리가 할 수 있는 모든 지원을 보내야 합니다."
  BAV_war_RUS:0 "러시아와의 전쟁"
