--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1394,8 +1394,8 @@
  SYR_democratic_DEF:0 "시리아"
  SYR_conservatives:0 "시리아"
  SYR_conservatives_DEF:0 "시리아"
- SYR_neutrality:0 "시리아 왕국"
- SYR_neutrality_DEF:0 "시리아 왕국"
+ SYR_neutrality:0 "시리아 봉기"
+ SYR_neutrality_DEF:0 "시리아 봉기"
  SYR_fascism:0 "국민주의 시리아국"
  SYR_fascism_DEF:0 "국민주의 시리아국"
  SYR_communism:0 "시리아 사회주의국"
@@ -1457,6 +1457,10 @@
  LBA_fascism_ADJ:0 "마그레브"
  LBA_democratic_ADJ:0 "리비아"
  LBA_neutrality_ADJ:0 "리비아"
+ 
+ WGR:0 "서독"
+ WGR_DEF:0 "서독"
+ WGR_ADJ:0 "서독"
  WGR_democratic:0 "서독"
  WGR_democratic_DEF:0 "서독"
  WGR_fascism:0 "베스트팔렌 제국"
@@ -1469,6 +1473,10 @@
  WGR_fascism_ADJ:0 "베스트팔렌"
  WGR_neutrality_ADJ:0 "바이에른-하노버"
  WGR_democratic_ADJ:0 "서독"
+
+ DDR:0 "동독"
+ DDR_DEF:0 "동독"
+ DDR_ADJ:0 "동독"
  DDR_communism:0 "동독"
  DDR_communism_DEF:0 "동독"
  DDR_neutrality:0 "프로이센 왕국"
@@ -1481,6 +1489,7 @@
  DDR_fascism_ADJ:0 "튜튼"
  DDR_neutrality_ADJ:0 "프로이센"
  DDR_democratic_ADJ:0 "독일"
+
  PAL_fascism:0 "팔레스타인 토후국"
  PAL_fascism_DEF:0 "팔레스타인 토후국"
  PAL_democratic:0 "팔레스타인"
@@ -2767,14 +2776,17 @@
  BAV_communism_DEF:0 "남부 코뮌"
  BAV_democratic:0 "바이에른 공화국"
  BAV_democratic_DEF:0 "바이에른 공화국"
- BAV_fascism:0 "바이에른 제국"
- BAV_fascism_DEF:0 "바이에른 제국"
+ BAV_fascism:0 "바이에른 왕국"
+ BAV_fascism_DEF:0 "바이에른 왕국"
  BAV_fascism_ADJ:0 "바이에른"
  BAV_democratic_ADJ:0 "바이에른"
  BAV_communism_ADJ:0 "바이에른"
  BAV_neutrality_ADJ:0 "바이에른"
  BAV_socialist_ADJ:0 "바이에른"
  BAV_conservatives_ADJ:0 "바이에른"
+ BAV:0 "바이에른"
+ BAV_DEF:0 "바이에른"
+ BAV_ADJ:0 "바이에른"
  
  KRW_neutrality:0 "갈리치아-로도메리아-부코비나"
  KRW_neutrality_DEF:0 "갈리치아-로도메리아-부코비나"
@@ -2792,10 +2804,10 @@
  KRW_DEF:0 "갈리치아-로도메리아-부코비나"
  KRW_ADJ:0 "갈리치아"
  
- RHN_neutrality:0 "라인 공화국"
- RHN_neutrality_DEF:0 "라인 공화국"
- RHN_fascism:0 "라인 제국"
- RHN_fascism_DEF:0 "라인 제국"
+ RHN_neutrality:0 "라인 연합"
+ RHN_neutrality_DEF:0 "라인 연합"
+ RHN_fascism:0 "라인 연합"
+ RHN_fascism_DEF:0 "라인 연합"
  RHN_democratic:0 "라인 연합"
  RHN_democratic_DEF:0 "라인 연합"
  RHN_communism:0 "라인 코뮌"
@@ -2814,8 +2826,8 @@
  WUT_democratic_DEF:0 "바덴-뷔르템베르크 공화국"
  WUT_communism:0 "바덴-뷔르템베르크 코뮌"
  WUT_communism_DEF:0 "바덴-뷔르템베르크 코뮌"
- WUT_fascism:0 "슈바벤 제국"
- WUT_fascism_DEF:0 "슈바벤 제국"
+ WUT_fascism:0 "바덴-뷔르템베르크"
+ WUT_fascism_DEF:0 "바덴-뷔르템베르크"
  WUT_neutrality_ADJ:0 "바덴-뷔르템베르크"
  WUT_democratic_ADJ:0 "바덴-뷔르템베르크"
  WUT_communism_ADJ:0 "바덴-뷔르템베르크"
@@ -2830,8 +2842,8 @@
  SAX_democratic_DEF:0 "작센 공화국"
  SAX_communism:0 "작센 인민공화국"
  SAX_communism_DEF:0 "작센 인민공화국"
- SAX_fascism:0 "작센 제국"
- SAX_fascism_DEF:0 "작센 제국"
+ SAX_fascism:0 "작센 왕국"
+ SAX_fascism_DEF:0 "작센 왕국"
  SAX_neutrality_ADJ:0 "작센"
  SAX_democratic_ADJ:0 "작센"
  SAX_communism_ADJ:0 "작센"
@@ -2842,8 +2854,8 @@
  
  WSM_neutrality:0 "저지 독일"
  WSM_neutrality_DEF:0 "저지 독일"
- WSM_fascism:0 "하노버 제국"
- WSM_fascism_DEF:0 "하노버 제국"
+ WSM_fascism:0 "하노버국"
+ WSM_fascism_DEF:0 "하노버국"
  WSM_communism:0 "북독일 코뮌"
  WSM_communism_DEF:0 "북독일 코뮌"
  WSM_democratic:0 "북독일 연방"
@@ -2953,12 +2965,12 @@
  FRA_2_communism:0 "프랑스 코뮌"
  FRA_2_communism_DEF:0 "프랑스 코뮌"
 
- FTU_democratic:0 "서아프리카"
- FTU_democratic_DEF:0 "서아프리카"
- FTU_democratic_ADJ:0 "아프리카"
- FTU_socialist:0 "서아프리카"
- FTU_socialist_DEF:0 "서아프리카"
- FTU_socialist_ADJ:0 "아프리카"
+ FTU_democratic:0 "프랑스령 서아프리카"
+ FTU_democratic_DEF:0 "프랑스령 서아프리카"
+ FTU_democratic_ADJ:0 "프랑스령 아프리카"
+ FTU_socialist:0 "프랑스령 서아프리카"
+ FTU_socialist_DEF:0 "프랑스령 서아프리카"
+ FTU_socialist_ADJ:0 "프랑스령 아프리카"
  FTU_conservatives:0 "서아프리카"
  FTU_conservatives_DEF:0 "서아프리카"
  FTU_conservatives_ADJ:0 "아프리카"
