--- a/localisation/equipment_l_english.yml
+++ b/localisation/equipment_l_english.yml
@@ -380,18 +380,19 @@
  AST_super_heavy_tank_destroyer_equipment_1:0 "아이언 듀크"
  AST_super_heavy_tank_destroyer_equipment_1_short:0 "아이언 듀크"
  
- BEL_light_tank_destroyer_equipment_1:0 "SA F.R.C. 47mm"
- BEL_light_tank_destroyer_equipment_1_short:0 "SA 47mm"
- BEL_light_tank_artillery_equipment_1:0 "SA F.R.C. 76mm"
- BEL_light_tank_artillery_equipment_1_short:0 "SA 76mm"
- BEL_light_tank_equipment_2:0 "CLR T15"
- BEL_light_tank_equipment_2_short:0 "T15"
- BEL_light_tank_destroyer_equipment_2:0 "T13 B1/B2"
- BEL_light_tank_destroyer_equipment_2_short:0 "T13 B1/B2"
- BEL_medium_tank_destroyer_equipment_1:0 "T13 B3"
- BEL_medium_tank_destroyer_equipment_1_short:0 "T13 B3"
- BEL_medium_tank_equipment_1:0 "ACG-1"
- BEL_medium_tank_equipment_1_short:0 "ACG-1"
+ 
+ BEL_light_tank_artillery_equipment_1:0 "Vickers Carden Loyd 1934 Artillery Tractor"
+ BEL_light_tank_artillery_equipment_1_short:0 "VCL-34 AT"
+ BEL_light_tank_equipment_1:0 "CLR T15"
+ BEL_light_tank_equipment_1_short:0 "T15"
+ BEL_light_tank_equipment_2:0 "Vickers-Carden-Loyd Model 1937"
+ BEL_light_tank_equipment_2_short:0 "VCL-37"
+ BEL_light_tank_destroyer_equipment_1:0 "T13 B1/B2"
+ BEL_light_tank_destroyer_equipment_1_short:0 "T13 B1/B2"
+ BEL_light_tank_destroyer_equipment_2:0 "T13 B3"
+ BEL_light_tank_destroyer_equipment_2_short:0 "T13 B3"
+ BEL_medium_tank_equipment_1:0 "Automitrailleuse de Combat Renault modèle 1935"
+ BEL_medium_tank_equipment_1_short:0 "AMC-35"
  
  CAN_medium_tank_equipment_1:0 "크루세이더 로컬 패턴"
  CAN_medium_tank_equipment_1_short:0 "크루세이더 LP"
@@ -1122,69 +1123,6 @@
  SER_modern_tank_equipment_1:0 "프로젝트 이그맨"
  SER_modern_tank_equipment_1_short:0 "이그맨"
  
- 
- GER_gw_armored_car_equipment:0 "존더크라프트파흐초익 222"
- GER_gw_armored_car_equipment_short:0 "Sdkfz 222"
- GER_armored_car_equipment_1:0 "존더크라프트파흐초익 231 8륜형"
- GER_armored_car_equipment_1_short:0 "Sdkfz 231"
- GER_armored_car_equipment_2:0 "존더크라프트파흐초익 234 "푸마""
- GER_armored_car_equipment_2_short:0 "푸마"
- GER_armored_car_at_equipment:0 "존더크라프트파흐초익 234/4 "파크바겐""
- GER_armored_car_at_equipment_short:0 "파크바겐"
-
- USA_gw_armored_car_equipment:0 "M1 장갑차"
- USA_gw_armored_car_equipment_short:0 "M1"
- USA_armored_car_equipment_1:0 "M3 스카웃 카"
- USA_armored_car_equipment_1_short:0 "M3"
- USA_armored_car_equipment_2:0 "M8 그레이하운드"
- USA_armored_car_equipment_2_short:0 "M8"
- USA_armored_car_at_equipment:0 "M38 90mm 포탑"
- USA_armored_car_at_equipment_short:0 "M38"
-
- ENG_gw_armored_car_equipment:0 "다임러 딩고"
- ENG_gw_armored_car_equipment_short:0 "딩고"
- ENG_armored_car_equipment_1:0 "험버 장갑차"
- ENG_armored_car_equipment_1_short:0 "험버"
- ENG_armored_car_equipment_2:0 "AEC 장갑차"
- ENG_armored_car_equipment_2_short:0 "AEC"
- ENG_armored_car_at_equipment:0 "AEC 6-파운드 포"
- ENG_armored_car_at_equipment_short:0 "AEC 6pdr."
-
- RUS_gw_armored_car_equipment:0 "BA-10"
- RUS_gw_armored_car_equipment_short:0 "BA-10"
- RUS_armored_car_equipment_1:0 "BA-20"
- RUS_armored_car_equipment_1_short:0 "BA-20"
- RUS_armored_car_equipment_2:0 "BA-64"
- RUS_armored_car_equipment_2_short:0 "BA-64"
- RUS_armored_car_at_equipment:0 "BA-64E-37"
- RUS_armored_car_at_equipment_short:0 "BA-64E-37"
-
- ITA_gw_armored_car_equipment:0 "피아트 AB611"
- ITA_gw_armored_car_equipment_short:0 "AB611"
- ITA_armored_car_equipment_1:0 "AB40"
- ITA_armored_car_equipment_1_short:0 "AB40"
- ITA_armored_car_equipment_2:0 "AS.42 사아리아나"
- ITA_armored_car_equipment_2_short:0 "AS.42"
- ITA_armored_car_at_equipment:0 "AS.42 47/32"
- ITA_armored_car_at_equipment_short:0 "AS.42 47/32"
-
- JAP_gw_armored_car_equipment:0 "92식 오사카"
- JAP_gw_armored_car_equipment_short:0 "오사카"
- JAP_armored_car_equipment_1:0 "92식 치요다"
- JAP_armored_car_equipment_1_short:0 "치요다"
- JAP_armored_car_equipment_2:0 "93식 고쿠산"
- JAP_armored_car_equipment_2_short:0 "고쿠산"
- JAP_armored_car_at_equipment:0 "타입 4 장갑차"
- JAP_armored_car_at_equipment_short:0 "타입 4 장갑차"
- 
- FRA_gw_armored_car_equipment:0 "라플리 S15"
- FRA_gw_armored_car_equipment_short:0 "S15"
- FRA_armored_car_equipment_1:0 "파나드 165"
- FRA_armored_car_equipment_1_short:0 "파나드 165"
- FRA_armored_car_equipment_2:0 "파나드 178"
- FRA_armored_car_equipment_2_short:0 "파나드 178"
- FRA_armored_car_at_equipment:0 "특수차량 207"
- FRA_armored_car_at_equipment_short:0 "V.S. 207"
 
  gw_tank_equipment:0 "대전기 전차"
  gw_tank_equipment_short:0 "대전기 전차"
