--- a/localisation/ftu_events_l_english.yml
+++ b/localisation/ftu_events_l_english.yml
@@ -68,6 +68,32 @@
  fcolony.18.b:0 "받아들인다. (괴뢰국화)"
  fcolony.18.c:0 "절대 안 돼!"
 
+ fcolony.20.t:0 "지중해 식민지가 독립하다!"
+ fcolony.20.d:0 "마르크스주의자들이 프랑스를 점령한 후, 한때 우리의 통치에 충성했던 우리의 식민지는 독립하기로 결정했답니다!\n\n불행히도 권력을 위한 내부 투쟁 때문에 현 시점에서 우리는 그들의 행동에 직접적인 영향을 줄 수 없다."
+ fcolony.20.a:0 "우리는 나중에 다시 올 것이다..."
+ 
+ fcolony.21.t:0 "프랑스령 적도 아프리카를 점령할 기회"
+ fcolony.21.d:0 "프랑스는 심각한 혼란 상태에 있습니다. 식민 제국이 붕괴될 위기에 처해 있습니다. 아프리카 대륙의 안정을 유지하는 것이 우리의 이익입니다.\n\n문제는 기회가 있는 동안 프랑스 적도 아프리카를 잡아야 하는가입니다."
+ fcolony.21.a:0 "그 지역을 점령하라."
+ fcolony.21.b:0 "그럴 가치도 없다."
+ 
+ fcolony.22.t:0 "친공화국 정부 수립이 추진되는 서부"
+ fcolony.22.d:0 "우리 정부는 프랑스 식민 제국의 완전한 붕괴를 예상하지 못했습니다. 마르크스주의 통치에 반대하던 사람들은 이제 국외로 도망쳐 다카르로 향합니다.\n\n새로 선포된 프랑스령 서아프리카를 책임지고 있는 사람들은 프랑스 코뮌을 합법적인 국가로 인정하지 않아 우리의 명령에 복종하지 않습니다."
+ fcolony.22.a:0 "어차피 거기엔 아무것도 없어..."
+ 
+ fcolony.23.t:0 "먼 식민지의 반란군"
+ fcolony.23.d:0 "독립운동의 물결은 먼 우리 식민지가 있는 인도양과 태평양에까지 이르렀습니다.\n\n오늘 프랑스는 마다가스카르 섬뿐만 아니라 먼 동부의 식민지도 잃었습니다..."
+ fcolony.23.a:0 "우린 그 고무가 필요해!"
+ 
+ fcolony.24.t:0 "프랑스 식민 제국의 붕괴"
+ fcolony.24.d:0 "프랑스 식민지 제국을 휩쓴 독립운동의 물결이 밀려왔습니다. 동서양에서 새로운 나라가 형성되었습니다.\n\n이는 프랑스 본토에서의 갑작스러운 정권 교체와 프랑스 코뮌 설립이 도움을 준 것입니다. 새로 설립된 대부분의 국가들은 파리 정부를 인정하지 않습니다."
+ fcolony.24.a:0 "흥미롭군..."
+ fcolony.24.b:0 "그 땅들은 결국 프랑스로 돌아올 것이다."
+ 
+ fcolony.25.t:0 "영국의 프랑스령 적도 아프리카 점령!"
+ fcolony.25.d:0 "우리의 옛 동맹국인 영국은 우리를 배신했습니다. 그들의 군대는 프랑스령 적도 아프리카에 들어가 모든 통신을 장악하고 영국의 식민지 행정부를 세웠습니다."
+ fcolony.25.a:0 "그건 예상하지 못했다..."
+
  FTU_one_africa_idea:0 "민족적 통합 신념"
  FRA_native_conscription:0 "원주민 징병"
  FRA_equality:0 "평등권법"
@@ -79,3 +105,5 @@
  FTU_new_penal_system_1:0 "형벌제 I"
  FTU_new_penal_system_2:0 "형벌제 II"
  FRA_french_developers:0 "프랑스 전문 지식"
+
+ eng_seized_colonies:0 " 측이 우리 식민지를 점령함"
