--- a/localisation/ger_events_l_english.yml
+++ b/localisation/ger_events_l_english.yml
@@ -8,12 +8,12 @@
  prussia.17.d:0 "우리는 단결했습니다! 우리는 다시 강해졌습니다! 이제 우리의 새로운 지도자인 독일 국민의 지도자를 선택해야 할 때입니다. 카이저 빌헬름 2세는 늙었기 때문에, 그는 그 규칙을 따를 수 없습니다. 현재 프로이센에서 가장 인기 있는 두 정치인은 빌헬름 3세와 헤르만 괴링입니다."
  prussia.17.a:0 "카이저 빌헬름 III"
  prussia.17.b:0 "헤르만 괴링"
- prussia.3.t:0 "독일이 자르를 요구하다"
- prussia.3.d:0 "독일은 국경을 복구하려는 야망을 포기했습니다. 그들은 자를란트와 모젤란트가 돌아오기를 원합니다."
- prussia.3.a:0 "자르를 넘겨라"
- prussia.3.b:0 "절대 안 돼!"
- prussia.4.t:0 "프랑스가 물러서다"
- prussia.4.d:0 "프랑스 관료들은 자를란트를 양도할 것이라고 공언했습니다. 영광스러운 제국을 되찾을 시간입니다!"
+ prussia.3.t:0 "독일 국경의 습격!"
+ prussia.3.d:0 "독일 정부는 알자스 지역에 대한 공식적인 최후통첩을 보냈습니다. 그들은 알자스의 통합을 요구하며 이 지역을 독일의 일부로 봅니다.\n\n게다가 우리는 프랑스와 독일 국경 근처의 독일군이 증강되고 있다는 보고를 받았습니다. 독일군이 분쟁에 대해 만반의 준비를 하고 있다는 것은 우리에게 분명합니다. 어떻게 진행하면 좋겠습니까?"
+ prussia.3.a:0 "알자스를 넘겨라."
+ prussia.3.b:0 "알자스는 프랑스 땅이다!"
+ prussia.4.t:0 "프랑스가 알자즈를 양도하다"
+ prussia.4.d:0 "프랑스 관료들은 알자스 지역을 양도할 것이라고 공언했습니다. 영광스러운 제국을 되찾을 시간입니다!"
  prussia.4.a:0 "훌륭해!"
  prussia.5.t:0 "프랑스가 거부하다"
  prussia.5.d:0 "프랑스인들은 우리의 요구를 거절했습니다. 만약 그들이 물러서지 않는다면, 이것은 갈등으로 번질 수 있습니다."
@@ -88,7 +88,7 @@
  prussia.10009.b:0 "통일을 향한 또 하나의 발걸음이다."
  prussia.10009.b:0 "이런다고 그들을 지킬 수 없을 것이다."
  prussia.10010.t:0 "프랑스에서의 승리!"
- prussia.10010.d:0 "파리가 함락되었습니다! 프랑스 북동부에서는 독일군이 압도적으로 우세하며, 아군은 프랑스 서부와 남부를 향해 진군하고 있습니다. 프랑스 공화국은 무너질 위기에 처했습니다. 이제 우리는 무너져 가는 나라를 어떻게 할 지 결정할 때입니다. 제국의회는 저지 왈로니아와 낭시와 같이 잃어버린 독일 영토를 반환하고 플랑드르에 괴뢰국을 수립한다는 내용의 콩피에뉴 정전 협정을 제안했습니다. 이 협정은 우리가 영국에 집중할 수 있게 해줄 것입니다. 카이저는 아이텔 프리드리히를 필두로 하는 괴뢰국 수립을 통해 궁극적으로 프랑스인들의 망명을 강제할 것을 제안했습니다..."
+ prussia.10010.d:0 "파리가 함락되었습니다! 프랑스 북동부에서는 독일군이 압도적으로 우세하며, 아군은 프랑스 서부와 남부를 향해 진군하고 있습니다. 프랑스 공화국은 무너질 위기에 처했습니다. 이제 우리는 무너져 가는 나라를 어떻게 할 지 결정할 때입니다. 제국의회는 저지 우알로니와 낭시와 같이 잃어버린 독일 영토를 반환하고 플란데런에 괴뢰국을 수립한다는 내용의 콩피에뉴 정전 협정을 제안했습니다. 이 협정은 우리가 영국에 집중할 수 있게 해줄 것입니다. 카이저는 아이텔 프리드리히를 필두로 하는 괴뢰국 수립을 통해 궁극적으로 프랑스인들의 망명을 강제할 것을 제안했습니다..."
  prussia.10010.a:0 "평화 협정을 시작하라!"
  prussia.10010.b:0 "프랑스 보호령을 수립하라!"
  prussia.10010.c:0 "군사 점령을 지속하라."
