--- a/localisation/ger_focus_l_english.yml
+++ b/localisation/ger_focus_l_english.yml
@@ -188,8 +188,8 @@
  GER_medium_tank_desc:0 "중형전차는 경전차의 조작력과 중전차의 강도 및 화력을 결합합니다. 그들은 우리 군대의 완벽한 선택입니다."
  GER_spec_ops:0 "특수작전단"
  GER_spec_ops_Desc:0 "새로운 형태의 전투에서는 특수 작전 사령부가 필수적입니다. 그들은 우리 군대에서 가장 훈련되고 전투 준비가 된 부대입니다."
- GER_war_FRA:0 "프랑스-영국 패권 파괴!"
- GER_war_FRA_desc:0 "이제 우리가 프랑스-영국의 세계 지배를 끝낼 때입니다! 그들의 식민지 놀이는 끝나야 합니다. 우리는 브뤼셀 조약을 다시 쓸 것입니다. 우리는 승리할 것입니다!"
+ GER_war_FRA:0 "프랑스와의 전쟁"
+ GER_war_FRA_desc:0 "이제 우리가 프랑스의 중부 유럽 지배를 끝낼 때입니다! 그들의 식민지 놀이는 끝나야 합니다. 우리는 브뤼셀 조약을 다시 쓸 것입니다. 우리는 승리할 것입니다!"
  GER_revanchist_propoganda:0 "보복주의 선전"
  GER_revanchist_propoganda_desc:0 "우리는 다음 전쟁을 대비해야 합니다. 그들은 단지 전쟁을 하기 위해 선전전을 벌이고 적에 대항하여 우리 국민을 선동하는 것입니다."
  GER_war_ENG:0 "영국과의 전쟁!"
@@ -276,8 +276,8 @@
  GER_hoffman_line_desc:0 "서부 방벽은 프랑스와의 국경선에 있으며, 이전 세계 대전 당시의 지크프리트 선과 같은 많은 땅을 차지하고 있습니다. 그 방어를 강화하면 우리가 더 적은 인력으로 국경을 지킬 수 있고, 잠재적인 동부 군사 작전에 더 사단이 참여할 수 있게 할 것입니다."
  GER_ally_RUS:0 "러시아와의 친선"
  GER_ally_RUS_desc:0 "러시아의 도움으로 프로이센의 군주제는 보존되었습니다. 아마도 우리는 동쪽의 잃어버린 영토를 잊어버리고 가장 위대한 제국의 하나인 러시아와 동맹을 맺어야 할 것입니다."
- GER_demand_saar:0 "자를란트 요구"
- GER_demand_saar_desc:0 "브뤼셀 조약 기간 동안 모젤란트와 자르의 대부분을 프랑스에 빼앗겼으니 잃어버린 땅을 되찾겠다는 최후통첩을 보내야 합니다."
+ GER_demand_saar:0 "알사스냐 전쟁이냐!"
+ GER_demand_saar_desc:0 "브뤼셀 조약 기간 동안 알사스 지역을 프랑스에 빼앗겼으니 잃어버린 땅을 되찾겠다는 최후통첩을 보내야 합니다."
  GER_manstein1939:0 "슐리펜을 한 번 더"
  GER_manstein1939_desc:0 "슐리펜 장군이 제안한 계획을 실행해 프랑스 방어선을 제압하고 베네룩스 지역에서 유실된 우리 땅을 되찾아야 합니다. 하지만 이번에는 힘과 현대 기술로 성공을 거둘 것입니다!"
  PRU_war_FRA:0 "프랑스와의 전쟁"
