--- a/localisation/rus_focus_l_english.yml
+++ b/localisation/rus_focus_l_english.yml
@@ -27,8 +27,8 @@
  RUS_land_doctrine_desc:0 "우리 군의 개혁을 기대한다면 현대전의 보다 효율적이고 강력한 전술로 전술을 개혁해야 합니다."
  RUS_tank:0 "기갑 사단"
  RUS_tank_desc:0 "전차는 현대 군대에서 절대적으로 필수적인 전쟁의 새 병기입니다. 다른 나라들은 분명 이 아름다운 기갑 살인 기계를 갖게 될 것이고, 우리는 더 나은 무기를 개발할 것입니다."
- RUS_navy_army:0 "러시아 해군"
- RUS_navy_army_desc:0 "아무리 대단한 일이더라도, 우리는 여전히 우리 해군을 위한 새로운 모델, 전술, 아이디어를 찾아야 합니다."
+ RUS_navy_army:0 "크론슈타트 요새화"
+ RUS_navy_army_desc:0 "수백 년 동안 크론슈타트는 우리의 수도 상트페테르부르크를 방어하는 요새였습니다. 그러나 오늘날 도시의 방어는 구식입니다. 우리는 이 섬에서 우리의 가장 중요한 도시에 대한 접근을 막기 위해 우리의 방어를 강화해야 합니다."
  RUS_navy_doctrine:0 "원양 함대"
  RUS_navy_doctrine_desc:0 "우리의 전술은 이런 새로운 전쟁 방식에는 낡고 쓸모없습니다. 우리는 개혁적이고 새로운 전술을 세울 필요가 있습니다."
  RUS_dock_effort:0 "조선소 확장"
@@ -289,8 +289,8 @@
  RUS_soviet_union_desc:0 "우리가 러시아 유산을 계속할 수는 있지만, 그것이 러시아 전역의 소수 민족들을 완전히 달래주지는 못할 것입니다. 따라서, 우리의 최선의 선택은 소비에트 사회주의 공화국 연방, 즉 약칭 소련의 설립입니다."
  RUS_soviet_russia:0 "러시아 소비에트 사회주의 공화국 선포"
  RUS_soviet_russia_desc:0 "우리가 소련을 설립할 수 있는 동안, 그것은 러시아인으로서 우리의 뿌리로부터 우리를 멀어지게 할 것입니다. 따라서 우리의 최선의 선택은 러시아 소비에트 사회주의 공화국을 설립하는 것입니다."
- RUS_fourth_internationale:0 "두번째 개입" #Yes, i know, its 2nd. First is Bavarian.
- RUS_fourth_internationale_desc:0 "바이에른 사람들은 첫 인터내셔널을 만들었을지 모르지만, 우리는 그것들 없이도 할 수 있는 것처럼 두번째 인터내셔널을 만들 것입니다. 국제적 소비에트는 인류가 될 것입니다!"
+ RUS_fourth_internationale:0 "프롤레타리아 동맹"
+ RUS_fourth_internationale_desc:0 "바이에른 사람들은 첫 인터내셔널을 만들었을지 모르지만, 우리는 그것들 없이도 할 수 있는 것처럼 두번째 인터내셔널을 만들 것입니다. 프롤레타리아 동맹은 인류가 될 것입니다!"
  RUS_spread_revolution_PER:0 "페르시아 노동자 해방"
  RUS_spread_revolution_PER_desc:0 "페르시아는 노동자들을 억압하는 나라로 영국이나 프랑스 같은 제국주의자들이 지배하고 있습니다. 우리는 페르시아 노동자들의 예속을 끝내고 그들을 억압의 족쇄에서 해방시켜야 합니다!"
  RUS_spread_revolution_AFG:0 "아프가니스탄에 혁명을"
