--- a/localisation/ser_focus_l_english.yml
+++ b/localisation/ser_focus_l_english.yml
@@ -47,7 +47,7 @@
  SER_mobilization_speed_desc:0 "We have to increase our the people's support of a potential war. Otherwise, our country will fall within months."
  SER_romania_coup:0 "루마니아에 혁명 전파"
  SER_romania_coup_desc:0 "The communists of Romania have come into contact with us. They have pleaded us to declare war on Romania and topple their incompetent monarchy. We shall happily oblige."
- SER_facist_menace:0 "파시스트에게 혁명 전파"
+ SER_facist_menace:0 "국민주의자의 위협"
  SER_facist_menace_desc:0 "Italy and Austria are two major powers that pose a significant threat to the Balkans. Italy has ambitions on Dalmatia, whilst Austria has ambitions on Croatia and Bosnia. We need to take them out before they take us out. Albania will definitely serve as a nice port for invading Italy."
  SER_spread_the_revolution:0 "크로아티아에 혁명 전파"
  SER_spread_the_revolution_desc:0 "From the Great War to our revolution, the Croats relied on us for their military. Now that our military alliance is dissolved, they are defenceless. This is our opportunity to unite Serbs and Croats under one state, and it will not be a missed one."
