--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english: 
- VICTORY_POINTS_TOOLTIP:0 "§G$NAME$§! victory points = §Y$POINTS$§!"  
+ VICTORY_POINTS_TOOLTIP:0 "§G$NAME$§! 승점  §Y$POINTS$§!"  
  VICTORY_POINTS_6521:0 "베를린"
  VICTORY_POINTS_692:0 "뮌헨"
  VICTORY_POINTS_6469:0 "에센&뒤셀도르프"
@@ -48,6 +48,11 @@
  VICTORY_POINTS_9692:0 "브라티슬라바"
  VICTORY_POINTS_9660:0 "부다페스트"
  VICTORY_POINTS_11610:0 "페치"
+ VICTORY_POINTS_682:0 "시오포크"
+ VICTORY_POINTS_701:0 "베스프렘"
+ VICTORY_POINTS_6720:0 "죄르"
+ VICTORY_POINTS_6751:0 "미슈콜츠"
+ VICTORY_POINTS_6700:0 "세게드"
  VICTORY_POINTS_10497:0 "바트만"
  VICTORY_POINTS_11853:0 "에르주름"
  VICTORY_POINTS_11659:0 "데브레첸"
@@ -115,7 +120,7 @@
  VICTORY_POINTS_9940:0 "이라클리오"
  VICTORY_POINTS_11818:0 "테살로니키"
  VICTORY_POINTS_11747:0 "앙카라"
- VICTORY_POINTS_9833:0 "이스탄불"
+ VICTORY_POINTS_9833:0 "차르그라드"
  VICTORY_POINTS_940:0 "코니아"
  VICTORY_POINTS_947:0 "부르사"
  VICTORY_POINTS_4112:0 "이즈미르"
@@ -698,7 +703,6 @@
  VICTORY_POINTS_513:0 "코벨"
  VICTORY_POINTS_572:0 "우츠크"
  VICTORY_POINTS_6557:0 "루브네"
- VICTORY_POINTS_11399:0 "루블린"
  VICTORY_POINTS_9544:0 "비아와포들라스카"
  VICTORY_POINTS_402:0 "시에들체"
  VICTORY_POINTS_442:0 "타르누프"
@@ -937,4 +941,15 @@
  VICTORY_POINTS_12559:0 "니콜라옙스크나아무르"
  VICTORY_POINTS_11523:0 "코자켄슈타트"
  VICTORY_POINTS_6174:0 "가치나"
+ VICTORY_POINTS_6348:0 "세르푸호프"
+ VICTORY_POINTS_9663:0 "소치"
+ VICTORY_POINTS_11617:0 "수후미"
+ VICTORY_POINTS_3668:0 "마하치칼라"
+ VICTORY_POINTS_6484:0 "루블린"
+ VICTORY_POINTS_9452:0 "헤움"
+ VICTORY_POINTS_6666:0 "제네바"
+ VICTORY_POINTS_9523:0 "베르사유"
+ VICTORY_POINTS_9638:0 "바젤"
+ VICTORY_POINTS_11590:0 "로잔"
+ VICTORY_POINTS_6706:0 "갈라치"
  
