--- a/localisation/wtt_decisions_l_english.yml
+++ b/localisation/wtt_decisions_l_english.yml
@@ -911,5 +911,5 @@
  GER_expand_nord:0 "노르드발퀴레 개선"
  GER_expand_the_nord_wall:0 "노르드발퀴레를 네덜란드와 덴마크로 확장"
  GER_expand_german_coastal:0 "독일 해안 요새 개선"
- BAV_french_flanders:0 "프랑스령 플랑드르 합병"
+ BAV_french_flanders:0 "프랑스령 플란데런 합병"
  BEL_state_integration:0 "주 합병"
