--- a/localisation/bav_events_l_english.yml
+++ b/localisation/bav_events_l_english.yml
@@ -45,6 +45,9 @@ bavaria.13.a:0 "이 일은 좋게 끝날 수 없다."
 news.1001.t:0 "국제 노동자 대회"
 news.1001.d:0 "오늘 뮌헨에서 처음으로 국제 노동자 대회가 열렸습니다. 전 세계의 사회주의 정당들은 개발정책과 사회주의에 대해 전 세계적으로 이야기해왔습니다. 프랑스, 영국, 미국, 그리고 심지어 러시아에서 온 공산당 지도자들이 모두 이 집회에 참가했습니다."
 news.1001.a:0 "흥미롭군..."
+news.1002.t:0 "German Unification"
+news.1002.d:0 "The world holds its breath as the impossible has happened. With the defeat of the Prussian forces, the Red Forces of Bavaria and the Rhine soon took the historical capital of Berlin. After that several cities in Germany recognized Munich as the Unifier of Germany and the rest of the Prussian State collapsed. The Royal Family has fled, several generals have been captured and the fighting has stopped. In Berlin before a crowd of 1 Million people, the German Socialist Republic was declared.\n                   The ideology of communism has been reborn."
+news.1002.a:0 "The Red Flag now flies over the Reichstag"
 bavaria.15.t:0 "독일 해군의 재건"
 bavaria.15.d:0 "이제 독일 대부분을 장악하고 있으니 독일 제국 함대를 되찾아 붉은 함대을 구성할 때가 되었습니다. 발트해와 북해에서 우리의 입지를 확보할 수 있도록 가능한 한 빨리 해야 합니다."
 bavaria.15.a:0 "붉은 함대 형성"
@@ -72,13 +75,3 @@ bavaria.21.b:0 "붉은 독일이여 영원하라!"
 bavaria.22.t:0 "프랑스는 우리와 함께 있다"
 bavaria.22.d:0 "우리는 혼자가 아닙니다! 프랑스는 우리의 독립을 지지하고, 전쟁이 일어나면 우리를 보호할 것입니다!"
 bavaria.22.a:0 "대단하군!"
-bavaria.30.t:0 "작센 최후통첩"
-bavaria.30.d:0 "바이에른 소비에트 공화국에서는 우리 땅을 모두 넘겨달라고 요구하고 있습니다. 어떻게 진행하면 좋겠습니까?"
-bavaria.30.a:0 "항복하라."
-bavaria.30.b:0 "절대 안 돼!"
-bavaria.31.t:0 "작센이 굴복하다"
-bavaria.31.d:0 "우리는 작센으로부터 전보를 받았습니다. 그들은 우리의 제안을 받아들였고 무기를 버리고 있다고 쓰여 있습니다."
-bavaria.31.a:0 "휼륭해."
-bavaria.32.t:0 "작센이 거부하다!"
-bavaria.32.d:0 "우리는 작센으로부터 전보를 받았습니다. 그들은 우리의 제안을 거부하기로 선택했다고 합니다."
-bavaria.32.a:0 "후회할 것이다!"
