--- a/localisation/ita_events_l_english.yml
+++ b/localisation/ita_events_l_english.yml
@@ -116,3 +116,8 @@
  italy.365.d:0 "이탈리아가 우리에게 아프리카의 뿔 지역을 이전하겠다고 제안했습니다. 비록 실용적이지는 않지만, 이탈리아가 불친절하게 변한다면 틀림없이 그 영토는 우리에게 불리하게 사용될 수 있을 것이고, 그 지역을 확보함으로써 우리는 어두운 대륙에 더욱 단단히 자리잡을 것입니다."
  italy.365.a:0 "물론이다."
  italy.365.b:0 "우리는 다시 한 번 이탈리아인의 빚에 남게 될 것이다."
+
+ #Decisions
+ ITA_integrate_territories_decisions:0 "점령지 관리"
+ ITA_integrate_territories_decisions_desc:0 "이탈리아의 점령하에 영토가 있습니다, 어떻게 해야 합니까?"
+ ITA_return_of_zagreb:0 "자그레브를 오스트리아로 반환"
