--- a/localisation/misc_l_english.yml
+++ b/localisation/misc_l_english.yml
@@ -27,3 +27,13 @@ rus_controlled_indus:0 "중앙집중화 계획"
 RUS_conservative_coalition_wins:0 "보수당 연합 승리"
 RUS_new_duma_elected:0 "새 두마 선출"
 usa_raises_militia:0 "§G미국 국가 민병대가 봉기할 것입니다...§!"
+
+#Traits
+INOT_tsar_of_all_russians:0 "전러시아의 차르"
+INOT_inexperienced_tsar:0 "미숙한 차르"
+INOT_ww1_general:0 "대전쟁 장군"
+INOT_kaiser_of_germany:0 "독일의 카이저"
+INOT_orator:0 "위대한 연설가"
+INOT_moderate_socialist:0 "온건한 사회주의자"
+INOT_reformer:0 "개혁가"
+INOT_industrialist_magnate:0 "공업왕"
