--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english: 
  STATE_1:0 "코르시카"
  STATE_2:0 "라티움"
- STATE_3:0 "스위스"
+ STATE_3:0 "로만디"
  STATE_4:0 "하오스트리아"
  STATE_5:0 "동프로이센"
  STATE_6:0 "플란데런"
@@ -149,7 +149,7 @@
  STATE_148:0 "라피"
  STATE_149:0 "포흐얀마"
  STATE_150:0 "사보"
- STATE_151:0 "동스위스"
+ STATE_151:0 "독일령 스위스"
  STATE_152:0 "상오스트리아"
  STATE_153:0 "티롤"
  STATE_154:0 "아폴드"
@@ -761,7 +761,7 @@
  STATE_760:0 "다반청"
  STATE_761:0 "후룬베이얼"
  STATE_762:0 "실레지아"
- STATE_762:1 "카토비체"
+ STATE_762:1 "카토비츠"
  STATE_763:0 "쾨니히스베르크"
  STATE_764:0 "서바나트"
  STATE_765:0 "카타르"
